fix(site): Back to top on logo click in Homepage + More doc - footer spacing

--- a/assets/styles/docs.scss
+++ b/assets/styles/docs.scss
@@ -34,6 +34,7 @@ $bd-gutter-x: 3rem;
 }
 
 .bd-main {
+    margin-bottom: 90px;
     grid-area: main;
 
     h1 {
